# image-flow

./: .clang-format  .gitignore  CMakeLists.txt  argumentParser.cpp  argumentParser.h  convertmode.cpp  convertmode.h  help.txt  image.cpp  image.h  main.cpp  mode.cpp  mode.h  modesfactory.cpp  modesfactory.h  readme.md  renamemode.cpp  renamemode.h  resizemode.cpp  resizemode.h  scalemode.cpp  scalemode.h  threadpool.cpp  threadpool.h  utils.cpp  utils.h
test/: CMakeLists.txt  argumentParser.cpp
